Criando serviço balances para expor uma rota GET /balance com banco de dados replicado. Implementado worker para consumir tópico balance e atualizar o saldo

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,27 @@
-version: '3'
-
 services:
-  goapp: 
-    build: .
+  walletcore: 
+    build:
+      context: .
+      dockerfile: Dockerfile.walletcore
     platform: linux/amd64
-    volumes:
-      - .:/app
     ports:
       - 8080:8080
+  
+  update-balance-worker: 
+    build:
+      context: .
+      dockerfile: Dockerfile.balance_worker
+    platform: linux/amd64
+  
+  balance-service: 
+    build:
+      context: .
+      dockerfile: Dockerfile.balance_service
+    platform: linux/amd64
+    ports:
+      - 3003:3003
 
-  mysql:
+  mysql-walletcore:
     image: mysql:5.7
     platform: linux/amd64
     environment:
@@ -19,7 +31,21 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - .docker/mysql:/var/lib/mysql
+      - .docker/mysql-walletcore:/var/lib/mysql
+      - ./sql/wallet:/docker-entrypoint-initdb.d
+  
+  mysql-balance:
+    image: mysql:5.7
+    platform: linux/amd64
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: balance
+      MYSQL_PASSWORD: root
+    ports:
+      - 3307:3306
+    volumes:
+      - .docker/mysql-balance:/var/lib/mysql
+      - ./sql/balance:/docker-entrypoint-initdb.d
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:6.1.0"
